data/collection/fixes/descriptions/scala/scala-9878
```scala
Welcome to Scala 2.11.8 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_77).
Type in expressions for evaluation. Or try :help.

scala> :paste
// Entering paste mode (ctrl-D to finish)

trait A {
  type Self >: this.type <: A
}

case class W(f: A) { outer =>
  type F = f.Self
  def selfF: F = f: f.Self
  type Self = W {
    type F = outer.F
  }

  def error(w: Self) = {
    val wF: w.F = w.selfF
  }
}

// Exiting paste mode, now interpreting.

<console>:23: error: type mismatch;
 found   : w.F
    (which expands to)  w.f.Self
 required: w.F
    (which expands to)  W.this.f.Self
           val wF: w.F = w.selfF
                           ^
```